# uevrLCX

./: .gitignore  .gitmodules  02_ANALYZE_HOOKS.ps1  03_ANALYZE_MODS.ps1  04_ANALYZE_ADAPTERS.ps1  05_ANALYZE_VR.ps1  06_ANALYZE_IMGUI.ps1  07_ANALYZE_UTILITY.ps1  08_ANALYZE_MISSING_FUNCTIONS.ps1  09_MERGE_ALL_ANALYSES.ps1  10_CREATE_FINAL_DEEPWIKI.ps1  195 results - 57 files.md  ADAPTERS_ANALYSE.en.md  ADAPTERS_ANALYSE.md  ALLE_ANALYSER_SAMLET.en.md  ALLE_ANALYSER_SAMLET.md  BUILD FIXES.md  BUILD_AND_TEST_GUIDE.md  CMakeLists.txt  CMakeLists_UEVRLCX_VR.txt  CMakeLists_full_system.txt  CMakeLists_test.txt  COMPLETE_FILE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_UEVR_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_COMPLETION_PLAN.md  CONTEXT7_20X_DEEPWIKI_STATUS.md  CONTEXT7_DEEPWIKI_FULL_INTEGRATION_PLAN.md  CONTEXT7_DEEPWIKI_INTEGRATION.md  CONTEXT7_DEEPWIKI_INTEGRATION_STATUS.md  CONTEXT7_IMPLEMENTATION_COMPLETE.md  CONTRIBUTING.md  CORE_ANALYSE.md  CROSS_ENGINE_STATUS_REPORT.md  CROSS_ENGINE_SYSTEM.md  DEEPWIKI_CONVERSION_COMPLETE.md  DEEPWIKI_FINAL_STATUS.md  DEEPWIKI_INTEGRATION_STATUS.md  DEEPWIKI_ONLY_INTEGRATION_STATUS.md  DISCLAIMER.txt  (+102 more)
SOURCECODE/MT-Framework/: CMakeLists.txt
SOURCECODE/MT-Framework/include/: mt_framework_adapter.hpp  mt_framework_factory.hpp  mt_framework_types.hpp
SOURCECODE/MT-Framework/src/: mt_framework_adapter.cpp  mt_framework_factory.cpp  mt_framework_main.cpp
adapters/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  adapter_registry.json  build_all.bat
adapters/MT-Framework/: .gitignore
adapters/RE-Engine/: .gitignore
adapters/REDengine4/: .gitignore  redengine4_adapter.cpp  redengine_adapter.hpp
adapters/UEVR/: .gitignore
adapters/Unity/: README.md  unity_adapter.cpp  unity_adapter.hpp
adapters/common/: .gitignore  matrix_extraction.hpp  memory_management.cpp  memory_management.hpp  motion_controllers.cpp  motion_controllers.hpp  performance_optimizer.cpp  performance_optimizer.hpp  testing_framework.cpp  testing_framework.hpp  ui_projection.cpp  ui_projection.hpp  vr_integration.hpp
dependencies/: .gitignore  CMakeLists.txt
dependencies/openvr/: CMakeLists.txt
dependencies/openvr/src/: jsoncpp.cpp
dependencies/sol2/single/: CMakeLists.txt
examples/: .gitignore  CMakeLists.txt
examples/basic_plugin/: basic_plugin.cpp
examples/custom_adapter/: custom_adapter.cpp
src/: .gitignore  CMakeLists.txt  Framework.cpp  Framework.hpp  Main.cpp  Mod.cpp  Plugin.cpp  UEVRLCX_Core.cpp  UEVRLCX_Core.h  WindowFilter.cpp  WindowFilter.hpp  simple_test.cpp  simple_vr_test.cpp  uevrLCX_Enhanced_Main.cpp  uevrLCX_Main.cpp
src/Context7AI/: Context7AIDatabase.h
src/DeepWiki/: DeepWikiConnector.h
src/Performance/: PerformanceOptimizer.h
src/Security/: SecurityFramework.h
src/Testing/: TestingFramework.h
src/adapters/: .gitignore  AdvancedEngineAdapters.hpp  BUILD_GUIDE.md  CMakeLists.txt  EngineAdapter.hpp  README.md  STATUS_REPORT.md  UniversalVRDeploymentSystem.hpp  UnrealEngineAdapter.hpp  everyfile.md  main.cpp  test_mass_deployment.cpp
src/adapters/common/: BaseCrossEngineAdapter.cpp  BaseCrossEngineAdapter.hpp  CrossEngineAdapter.cpp  CrossEngineAdapterFactory.cpp  CrossEngineAdapterFactory.hpp  UObjectHookSystem.cpp  UObjectHookSystem.hpp  UniversalAdapterFactory.hpp  UniversalEngineDetector.cpp  UniversalEngineDetector.hpp  UniversalEngineRegistry.cpp  UniversalEngineRegistry.hpp  UniversalVRFactory.hpp
src/adapters/mhw/: mhw_adapter.cpp
src/ai/: AIPoweredVROptimizer.cpp  AIPoweredVROptimizer.hpp
src/community/: CommunityLearningSystem.hpp
src/context7/: .gitignore  CMakeLists.txt  Context7AISystem.hpp  Context7Database.cpp  Context7Database.hpp  DeepWikiAI.hpp  NeuralNetworkEngine.hpp  README.md
src/core/: .gitignore  CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  Context7Database.cpp  Context7Database.hpp  Context7Database_COMPLETE.hpp  Context7Database_FULL.hpp  EngineAdapter.cpp  EngineAdapter.h  EventSystem.cpp  EventSystem.h  ExceptionHandler.cpp  ExceptionHandler.hpp  Framework.cpp  Framework.hpp  GameDetector.cpp  GameDetector.h  HookManager.hpp  IPlugin.hpp  Logger.hpp  LoggingSystem.cpp  LoggingSystem.h  MemoryManager.hpp  PerformanceMetrics.hpp  PerformanceMonitor.cpp  PerformanceMonitor.h  PluginManager.cpp  PluginManager.hpp  SystemManager.cpp  SystemManager.h  SystemState.hpp  ThreadManager.cpp  UEVRLCX_Core.cpp  UEVRLCX_Core.h  VRSystem.cpp  VRSystem.h  adapter_loader.cpp  adapter_loader.h  engine_detection.cpp  (+1 more)
src/hooks/: .gitignore  CMakeLists.txt  DirectXHooks.cpp  EngineHooks.cpp  GameHooks.cpp  GameHooks.h  HookManager.cpp  HooksManager.h  OpenGLHooks.cpp  VulkanHooks.cpp
src/mods/: .gitignore  CMakeLists.txt  ModManager.h  VR.cpp
src/neural/: NeuralRenderingSystem.cpp  NeuralRenderingSystem.hpp
src/quest3/: Quest3Integration.hpp
src/uevr-imgui/: .gitignore  imgui_impl_win32.cpp
src/utility/: .gitignore
src/vr/: .gitignore  AdvancedPhysicsIntegration.cpp  AdvancedPhysicsIntegration.hpp  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  CompatibilityManager.cpp  Depth3DExtractor.cpp  Depth3DExtractor.h  Depth3DIntegration.cpp  Depth3DIntegration.hpp  EngineAdapter.h  EngineAdapters.cpp  EngineAgnosticRenderer.cpp  FoveatedRenderer.cpp  FoveatedRenderer.h  FullAestheticCollisionEngine.cpp  FullPhysicsIntegration.cpp  GameAnalyzer.cpp  IntegrationTest.cpp  OpenXRIntegration.cpp  PerformanceOptimization.cpp  PerformanceOptimization.hpp  PerformanceOptimizer.cpp  PerformanceOptimizer.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineIntegration.cpp  PhysicsEngineIntegration.hpp  RedditCommunityIntegration.cpp  RedditCommunityIntegration.hpp  ReshadeFramework.cpp  ReshadeFramework.h  ReshadeIntegration.cpp  ReshadeIntegration.hpp  StereoscopicRenderer.hpp  UniversalVRConversionSystem.cpp  UniversalVRConversionSystem.hpp  UniversalVRConverter.cpp  UniversalVRConverter.hpp  (+18 more)
tests/: .gitignore  CMakeLists.txt  TestFramework.hpp  simple_test.cpp  test_context7_system.cpp
tests/integration/: mt_framework_tests.cpp
tests/unit/: core_tests.cpp
(+1035 files in other folders)
